--- a/lovinganimal1.html
+++ b/lovinganimal1.html
@@ -52,7 +52,7 @@
       </div>
       <div class="w3-bar-block">
         <a
-          href="lovinganimal.html"
+          href="index.html"
           onclick="w3_close()"
           class="w3-bar-item w3-button w3-padding w3-text-teal"
           ><i class="fa fa-th-large fa-fw w3-margin-right"></i>HOME</a
@@ -100,7 +100,7 @@
           <h1><b>Welcome to my website Loving Animals</b></h1>
           <div class="w3-section w3-bottombar w3-padding-16">
             <span class="w3-margin-right">Filter:</span>
-            <a href="lovinganimal.html"><button class="w3-button w3-black">Animal</button></a>
+            <a href="index.html"><button class="w3-button w3-black">Animal</button></a>
             <a href="https://www.youtube.com/@LovingAnimals-z9g"
               ><button class="w3-button w3-white">
                 <i class="fa fa-diamond w3-margin-right"></i>Youtube
@@ -210,7 +210,7 @@ A deer is a gentle wild animal with slender legs and antlers (horns) on the male
       <div class="w3-center w3-padding-32">
         <div class="w3-bar">
 
-          <a href="lovinganimal.html" class="w3-bar-item  w3-button w3-hover-black ">1</a>
+          <a href="index.html" class="w3-bar-item  w3-button w3-hover-black ">1</a>
           <a href="lovinganimal1.html" class="w3-bar-item w3-black w3-button ">2</a>
 
         </div>
@@ -250,3 +250,4 @@ A deer is a gentle wild animal with slender legs and antlers (horns) on the male
     </script>
   </body>
 </html>
+
