--- a/donate.html
+++ b/donate.html
@@ -52,7 +52,7 @@
       </div>
       <div class="w3-bar-block">
         <a
-          href="lovinganimal.html"
+          href="index.html"
           onclick="w3_close()"
           class="w3-bar-item w3-button w3-padding w3-text-teal"
           ><i class="fa fa-th-large fa-fw w3-margin-right"></i>HOME</a
@@ -100,7 +100,7 @@
           <h1><b>Welcome to my website Loving Animals</b></h1>
           <div class="w3-section w3-bottombar w3-padding-16">
             <span class="w3-margin-right">Filter:</span>
-            <a href="lovinganimal.html"><button class="w3-button w3-white">Animal</button></a>
+            <a href="index.html"><button class="w3-button w3-white">Animal</button></a>
             <a href="https://www.youtube.com/@LovingAnimals-z9g"
               ><button class="w3-button w3-white">
                 <i class="fa fa-diamond w3-margin-right"></i>Youtube
@@ -177,3 +177,4 @@
     </script>
   </body>
 </html>
+
